# koe

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  biome.json  commitlint.config.js  package.json
.cargo/: config.toml
crates/koe-cli/: Cargo.toml
crates/koe-cli/src/: config.rs  config_cmd.rs  init.rs  main.rs  raw_audio.rs  session.rs  tui.rs
crates/koe-core/: Cargo.toml
crates/koe-core/src/: error.rs  http.rs  lib.rs  transcript.rs  types.rs
crates/koe-core/src/asr/: groq.rs  mod.rs  whisper.rs
crates/koe-core/src/capture/: handler.rs  mod.rs  sck.rs
crates/koe-core/src/process/: chunker.rs  mod.rs  queue.rs  resample.rs  vad.rs
crates/koe-core/src/summarize/: filter.rs  mod.rs  ollama.rs  openrouter.rs  patch.rs
crates/koe-core/src/summarizer/: mod.rs  ollama.rs  openrouter.rs  patch.rs
crates/koe-core/src/transcribe/: groq.rs  local.rs  mod.rs
scripts/: koe-groq.sh  koe-init.sh  koe-whisper.sh
