[workspace]
members = ["crates/koe-core", "crates/koe-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Audio capture and processing
screencapturekit = { version = "1.5.0", features = ["macos_26_0"] }
rtrb = "0.3.2"
rubato = "0.16.2"
voice_activity_detector = "0.2.1"
whisper-rs = { version = "0.15.1", features = ["metal"] }

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# CLI
clap = { version = "4.5.56", features = ["derive"] }

# HTTP
ureq = { version = "3.1.4", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.18"

# macOS
core-foundation = "0.10.1"
