[package]
name = "koe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "koe"
path = "src/main.rs"

[dependencies]
koe-core = { path = "../koe-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
